fixed bug where input boxes were being forced out of place by other input boxes

--- a/edit/style.css
+++ b/edit/style.css
@@ -22,6 +22,10 @@ ul {
     margin: 0;
 }
 
+ul li {
+    height: 23px;
+}
+
 ul p {
     display: inline-block;
     margin: 4px 4px;
@@ -42,7 +46,7 @@ ul button {
 
 .longinput {
     width: 400px;
-    height: 21.5px;
+    height: 23px;
 }
 
 .longinput label {
